--- a/src/index.jade
+++ b/src/index.jade
@@ -6,6 +6,8 @@ html(ng-app="app")
     meta(http-equiv="X-UA-Compatible" content="IE=edge,chrome=1")
     meta(name="description" content="Demo project")
     meta(name="viewport" content="width=device-width, initial-scale=1")
+    base(href="/")
+
     // build:css styles/main.css
     // bower:css
     // endbower
