--- a/src/app/global/header.jade
+++ b/src/app/global/header.jade
@@ -1,2 +1,4 @@
-.header
-	div Microcampañas Neo-Jupiter
+.header.col-md-12
+	.col-md-2
+		img(src="assets/img/logo.png")
+	.col-md-10.title Microcampañas Neo-Jupiter
