--- a/src/styles/includes/_header.scss
+++ b/src/styles/includes/_header.scss
@@ -1,12 +1,16 @@
 .header {
 	background: #FE0000;
 	color: white;
-	height: 60px;
+	height: 70px;
 	margin: auto;
-	div {
-		padding: 0.5em;
+	.title {
+		padding: 0.77em;
 		font-size: 24px;
 		font-weight: 600;
 	}
-
+	img {
+		height: 40px;
+		width: auto;
+		padding: .95em
+	}
 }
